--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,11 @@ dependencies:
   record: ^4.0.7
   path_provider: ^2.0.14
   file_picker: ^5.0.0
+  audioplayers:
+  wave:
 
 dev_dependencies:
+  flutter_launcher_icons:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -59,6 +62,12 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.jpg"
+
+
 flutter:
 
   # The following line ensures that the Material Icons font is
